新增z軸旋轉